[tool.poetry]
name = "eventbus"
version = "0.1.0"
description = "A simple pythonic single thread IOC (inversion of control) library"
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
